--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Selby Kendrick",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.6.0",
     "elasticsearch": "^4.0.2",
     "express": "^4.12.3",
     "firebase": "^2.2.4",
