--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
   "author": "Selby Kendrick",
   "license": "MIT",
   "dependencies": {
-    "elasticsearch": "^11.0.1",
+    "@elastic/elasticsearch": "^7.11.0",
     "express": "^4.12.3",
-    "firebase": "^2.2.4",
-    "lodash": "^4.15.0",
-    "request": "^2.74.0"
+    "firebase": "^8.2.7",
+    "lodash": "^4.15.0"
   }
 }
